--- a/redis-distribute-lock/pom.xml
+++ b/redis-distribute-lock/pom.xml
@@ -12,9 +12,16 @@
     <artifactId>redis-distribute-lock</artifactId>
 
     <dependencies>
-        <dependency>
+        <!--<dependency>
             <groupId>org.redisson</groupId>
             <artifactId>redisson</artifactId>
+            <version>3.11.2</version>
+        </dependency>-->
+
+        <!-- 整合springboot就不需要RedissonConfig，直接注入redissonClient -->
+        <dependency>
+            <groupId>org.redisson</groupId>
+            <artifactId>redisson-spring-boot-starter</artifactId>
             <version>3.11.2</version>
         </dependency>
     </dependencies>
