Guava RateLimiter客户端限流【单机限流】

--- a/pom.xml
+++ b/pom.xml
@@ -6,6 +6,7 @@
     <modules>
         <module>redis-distribute-lock</module>
         <module>zk-distribute-lock</module>
+        <module>rate-limiter</module>
     </modules>
     <parent>
         <groupId>org.springframework.boot</groupId>
