--- a/pom.xml
+++ b/pom.xml
@@ -11,6 +11,7 @@
         <module>es-search</module>
         <module>data-structures</module>
         <module>message-MQ</module>
+        <module>netty-message</module>
     </modules>
     <parent>
         <groupId>org.springframework.boot</groupId>
