音频转换 wav到opus

--- a/data-structures/pom.xml
+++ b/data-structures/pom.xml
@@ -12,4 +12,30 @@
     <artifactId>data-structures</artifactId>
 
 
+    <dependencies>
+        <!-- javacv+javacpp核心库-->
+        <dependency>
+            <groupId>org.bytedeco</groupId>
+            <artifactId>javacv</artifactId>
+            <version>1.5.7</version>
+        </dependency>
+        <dependency>
+            <groupId>org.bytedeco</groupId>
+            <artifactId>javacpp</artifactId>
+            <version>1.5.7</version>
+        </dependency>
+        <!-- ffmpeg最小依赖包，必须包含上面的javacv+javacpp核心库 -->
+        <dependency>
+            <groupId>org.bytedeco</groupId>
+            <artifactId>ffmpeg</artifactId>
+            <version>5.0-1.5.7</version>
+            <classifier>windows-x86_64</classifier>
+        </dependency>
+        <dependency>
+            <groupId>org.bytedeco</groupId>
+            <artifactId>ffmpeg</artifactId>
+            <version>5.0-1.5.7</version>
+            <classifier>linux-x86_64</classifier>
+        </dependency>
+    </dependencies>
 </project>
