--- a/rate-redis-lua-limiter/src/main/resources/application.properties
+++ b/rate-redis-lua-limiter/src/main/resources/application.properties
@@ -2,6 +2,10 @@ spring.application.name=rate-redis-lus-limiter
 server.port=10010
 
 
-spring.redis.host=127.0.0.1
-spring.redis.port=6379
-spring.redis.database=3
+#spring.redis.host=127.0.0.1
+#spring.redis.port=6379
+#spring.redis.database=3
+
+
+spring.redis.cluster.nodes=192.168.100.82:6379
+spring.redis.cluster.password=J3x7ICW4feLMq
