--- a/pom.xml
+++ b/pom.xml
@@ -28,6 +28,7 @@
         <java.version>1.8</java.version>
     </properties>
     <dependencies>
+        <!--    redis依赖开始    -->
         <dependency>
             <groupId>org.springframework.boot</groupId>
             <artifactId>spring-boot-starter-data-redis</artifactId>
@@ -37,6 +38,8 @@
             <artifactId>commons-pool2</artifactId>
             <version>2.8.1</version>
         </dependency>
+        <!--    redis依赖结束    -->
+
         <dependency>
             <groupId>org.springframework.boot</groupId>
             <artifactId>spring-boot-starter-web</artifactId>
